Fix author list alignment

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -4,5 +4,6 @@ main {
   @include screen-above(mobile) {
     position: absolute;
     z-index: -1;
+    width: 100%;
   }
 }
